# linux-speech-tools

./: .gitignore  CHANGELOG.md  GNOME_INTEGRATION.md  GNOME_MEDIA_CONTROLS.md  LICENSE  README.md  SCRIPTS_REORGANIZATION.md  SCRIPT_ANALYSIS.md  choose-recording-mode.sh  chunk_quality_analyzer.py  chunking_evaluation_results.json  continuous_audio.py  continuous_streaming.py  debug-speech.sh  demo-audio-streaming.sh  demo-gap-vs-continuous.py  demo-gnome-media-integration.sh  early_start_player.py  example-chunks.txt  gnome-dictation  gnome-reader-control.py  install-continuous-streaming-deps.sh  install-gnome-integration.sh  installer.sh  pyproject.toml  real_world_validation_report.py  release.sh  requirements.txt  say  say-read-continuous  say-read-gnome  say-read-mvp  say-read-smooth  say_read.py  say_read_continuous.py  setup-hotkey.sh  simple-speech.sh  simple_parallel.py  smart_chunking.py  talk2claude  (+8 more)
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  package-test.yml  performance-test.yml  release-test.yml  release.yml  security-scan.yml
analysis/: COMMIT_CLEANUP_PLAN.md  advanced_sentence_splitter.py  check_remaining_failures.py  debug_reconstruction.py  detailed_failure_analysis.py  mvp_chunking_analysis.py  precise_chunker.py  update_final_tests.py  update_gold_standard.py  update_superior_chunks.py  update_test_suites.py
data/: superior_chunks_update.json
docs/: FINAL_100_PERCENT_SUCCESS_REPORT.md  GNOME-INTEGRATION-REQUIREMENTS.md  IMPLEMENTATION-MILESTONES.md  PRD-PROGRESSIVE-STREAMING.md  STEP0-VALIDATION-RESULTS.md  ULTRATHINKING_SUCCESS_REPORT.md
docs/architecture/: ARCHITECTURE-PROGRESSIVE-STREAMING.md  FINAL_CHUNKING_REPORT.md  MVP_STREAMING_SUCCESS_REPORT.md  PHASE_ANALYSIS_AND_STRATEGIC_RECOMMENDATION.md  STEP0-SIMPLE-MVP.md
docs/planning/: CONSOLIDATING_BINARIES.md
docs/user-guide/: CONTINUOUS_STREAMING.md  GNOME_INTEGRATION.md
examples/demos/: demo-gnome-media-integration.sh
gnome-extension/: extension.js  metadata.json
scripts/: gnome-notification-handler.sh  pre-release-check.sh  quick-release-check.sh  test-speech.sh
scripts/debug/: debug-speech.sh
scripts/demo/: demo-audio-streaming.sh
scripts/install/: install-continuous-streaming-deps.sh  install-gnome-integration.sh  install-with-uv.sh  installer.sh
scripts/release/: release.sh
scripts/setup/: restart-gnome-wayland.sh
src/chunking/: chunk_quality_analyzer.py  chunking_test_framework.py  enhanced_chunking.py  gold_standard_chunker.py  (+2 more)
tests/: test-gnome-integration.sh  test_speech_tools.py
(+8 files in other folders)
