# Linux Speech Tools - Dependency Management Only
# This pyproject.toml manages dependencies for standalone scripts

[project]
name = "linux-speech-tools"
version = "1.0.2"
description = "Professional text-to-speech and voice input tools for Linux systems"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Linux Speech Tools Contributors" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: System :: Shells",
]
requires-python = ">=3.8"

# Core dependencies shared by most scripts
dependencies = [
    "numpy>=1.20.0",
    "soundfile>=0.10.0",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "edge-tts>=6.1.0",
    "speechrecognition>=3.10.0",
]

[project.optional-dependencies]
# Audio processing dependencies
audio = [
    "librosa>=0.9.0",
    "scipy>=1.7.0",
    "pydub>=0.25.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# High-quality neural TTS (heavy but worth it for quality!)
kokoro = [
    "kokoro-onnx>=0.1.0",
    "torch>=2.0.0",
    "onnxruntime>=1.15.0",
    "readability-lxml>=0.8.1",
    "ebooklib>=0.18.0",
    "pdfminer.six>=20221105",
]

# Lightweight TTS for basic usage
tts = [
    "pydub>=0.25.0",
]

# Everything for full installation (direct dependencies to avoid circular reference)
all = [
    "numpy>=1.20.0",
    "soundfile>=0.10.0",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "edge-tts>=6.1.0",
    "speechrecognition>=3.10.0",
    "librosa>=0.9.0",
    "scipy>=1.7.0",
    "pydub>=0.25.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/pablopda/linux-speech-tools"
Repository = "https://github.com/pablopda/linux-speech-tools.git"
Issues = "https://github.com/pablopda/linux-speech-tools/issues"

# Scripts are managed as standalone files, not Python package entry points

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]